tests/testWorkflows/invalid_workflows/invalidInputWorkflow.playbook
{
    "name": "invalidInputWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "returnPlusOne",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "number",
                            "value": "abc"
                        }
                    ],
                    "name": "1",
                    "next": [],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next": [
                        {
                            "flags": [
                                {
                                    "action": "regMatch",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "filters": [
                                        {
                                            "action": "length",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}